p3/confs/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    IOT/owner: "m&m's"
